# hjkl-video-editor

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml
backend/: Cargo.toml
backend/src/: api.rs  config.rs  lib.rs  main.rs  models.rs  providers.rs  use_cases.rs
backend/src/api/: configurator.rs  endpoints.rs  postcard_body.rs  response.rs
backend/src/api/endpoints/: asset_thumbnail.rs  asset_waveform.rs  config_frontend.rs  connect_nodes.rs  disconnect_nodes.rs  invalidate_node.rs  node_create.rs  node_delete.rs  node_file.rs  node_loop_clip.rs  node_position.rs  node_settings.rs  node_thumbnail.rs  project_get.rs  projects_create.rs  projects_delete.rs  projects_list.rs  projects_rename.rs  run_node.rs  subtitle_preview.rs  task_status.rs  template_delete.rs  template_list.rs  template_save.rs  template_unpack.rs  upload_begin.rs  upload_chunk.rs  upload_finalize.rs
backend/src/models/: cache.rs  project.rs  subgraph.rs
backend/src/providers/: audio_analysis.rs  compositor.rs  ffmpeg.rs  project_storage.rs  spline.rs  task_pool.rs  template_storage.rs  upload_manager.rs  whisper.rs
backend/src/use_cases/: connect_nodes.rs  create_node.rs  create_project.rs  delete_node.rs  delete_project.rs  delete_template.rs  disconnect_nodes.rs  get_project.rs  invalidate_node.rs  list_projects.rs  list_templates.rs  rename_project.rs  run_node.rs  save_template.rs  task_status.rs  unpack_template.rs  update_node_position.rs  update_node_settings.rs  upload_begin.rs  upload_finalize.rs
backend/tests/: upload_endpoints.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs  services.rs
frontend/src/components/: asset_view.rs  clip.rs  helpers.rs  mod.rs  modals.rs  overlay.rs  subtitle_track.rs  subtitles_view.rs  video_player.rs
frontend/src/pages/: editor.rs  projects.rs
frontend/src/pages/editor/: mod.rs  node_view.rs
frontend/src/pages/editor/nodes/: basic.rs  clip.rs  image_processing.rs  mod.rs  named.rs  (+2 more)
frontend/src/services/: api.rs  config.rs  project_service.rs  upload_service.rs
frontend/styles/: main.css
(+6 files in other folders)
