[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
mime = "0.3"
futures-util = "0.3"
postcard = { version = "1", features = ["alloc"] }
actix-files = "0.6"
whisper-rs = { version = "0.16", features = ["metal"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio-util = { version = "0.7", features = ["io"] }
api-types = { path = "../common/api-types" }

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
actix-http = "3"
tempfile = "3"
