[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "Blob",
    "BlobPropertyBag",
    "DomRect",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "HtmlMediaElement",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "DragEvent",
    "DataTransfer",
    "Storage",
    "AddEventListenerOptions",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
api-types = { path = "../common/api-types" }
thiserror = "1"
toml = "0.8"
